--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,20 +1,29 @@
 {
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "ng serve",
-      "type": "pwa-chrome",
+      "type": "firefox",
       "request": "launch",
-      "preLaunchTask": "npm: start",
-      "url": "http://localhost:4200/"
+      "name": "CB Firefox",
+      "url": "http://localhost:4060",
+      "webRoot": "${workspaceFolder}"
     },
     {
-      "name": "ng test",
+      "type": "edge",
+      "request": "launch",
+      "name": "CB Edge",
+      "url": "http://localhost:4060",
+      "webRoot": "${workspaceFolder}"
+    },
+    {
       "type": "chrome",
       "request": "launch",
-      "preLaunchTask": "npm: test",
-      "url": "http://localhost:9876/debug.html"
+      "name": "CB Chrome",
+      "url": "http://localhost:4060",
+      "webRoot": "${workspaceFolder}"
     }
   ]
 }
